<resources>
    <string name="app_name" translatable="false">Omnia</string>
    <string name="alert_dialog_bt_positive">Yes</string>
    <string name="alert_dialog_bt_negative">No</string>
    <string name="alert_dialog_bt_save">Save</string>
    <string name="alert_dialog_bt_cancel">Cancel</string>
    <string name="auth_et_email_hint" translatable="false">Email</string>
    <string name="auth_et_password_hint">Password</string>
    <string name="auth_bt_sign_up">Sign Up</string>
    <string name="auth_bt_sign_in">Sign In</string>
    <string name="auth_bt_forgot_pass">Forgot your password?</string>
    <string name="auth_toast_signing_in">Authenticating…</string>
    <string name="auth_toast_sign_in_failure">Authentication failed</string>
    <string name="auth_invalid_email">Invalid email!</string>
    <string name="auth_invalid_password">Invalid password! (from 6 to 15 characters)</string>
    <string name="auth_toast_signing_up">Signing up…</string>
    <string name="auth_toast_sign_up_failure">Sign up failed</string>
    <string name="auth_forgot_pass">Fill in your email</string>
    <string name="auth_toast_reset_pass_success">Email sent</string>
    <string name="auth_toast_reset_pass_failure">Something went wrong</string>
    <string name="blocks_title">Blocks</string>
    <string name="bodies_title">Bodies</string>
    <string name="comments_title">Comments</string>
    <string name="deputies_title">Deputies</string>
    <string name="edit_comment_title">Edit Comment</string>
    <string name="edit_post_title">Edit Post</string>
    <string name="edit_reply_title">Edit Reply</string>
    <string name="events_title">Events</string>
    <string name="fronts_title">Fronts</string>
    <string name="main_toast_press_back">Press again to leave</string>
    <string name="main_email_toast_verification">Email not verified</string>
    <string name="main_tv_connection">No internet connection…</string>
    <string name="new_comment_title">New Comment</string>
    <string name="new_comment_body_hint">Write your comment…</string>
    <string name="new_comment_toast_commenting">Sending comment…</string>
    <string name="new_post_title">New Post</string>
    <string name="new_post_title_hint">Title</string>
    <string name="new_post_body_hint">Write your post…</string>
    <string name="new_post_toast_user_fetch_error">Could not fetch user"</string>
    <string name="new_post_toast_posting">Sending post…</string>
    <string name="new_reply_title">New Reply</string>
    <string name="new_reply_body_hint">Write your reply…</string>
    <string name="new_reply_toast_replying">Sending reply…</string>
    <string name="parties_title">Parties</string>
    <string name="polls_title">Polls</string>
    <string name="profile_settings_title">Profile Settings</string>
    <string name="profile_settings_bt_sign_out">Sign out</string>
    <string name="profile_settings_bt_delete_account">Delete account</string>
    <string name="profile_settings_ad_delete_account">Do you really want to delete your
        account?</string>
    <string name="profile_settings_toast_delete_account">Deleting account…</string>
    <string name="propositions_title">Propositions</string>
    <string name="replies_title">Replies</string>
    <string name="search_law_title">Laws</string>
    <string name="search_law_et_hint">Search for a law</string>
    <string name="search_law_ib_description">search</string>
    <string name="search_law_tv_none">No results…</string>
    <string name="search_user_title">Search Results</string>
    <string name="search_user_tv_none">No results…</string>
    <string name="settings_title">Settings</string>
    <string name="settings_customization_title">Customization</string>
    <string name="settings_theme_pref">Theme</string>
    <string name="settings_theme_pref_key">theme</string>
    <string name="settings_theme_pref_sum_on">Light</string>
    <string name="settings_theme_pref_sum_off">Dark</string>
    <string name="settings_theme_pref_default">false</string>
    <string name="share_title">Share</string>
    <string name="share_with">Share with…</string>
    <string name="subs_title">Subscriptions</string>
    <string name="subs_tv_none">No subs yet…</string>
    <string name="user_page_bt_posts">Posts</string>
    <string name="user_page_bt_sub">Subscribe</string>
    <string name="user_page_bt_unsub">Unsubscribe</string>
    <string name="user_page_about_hint">…</string>
    <string name="user_page_sub">Subscribed</string>
    <string name="user_page_unsub">Unsubscribed</string>
    <string name="user_posts_title">Posts</string>
    <string name="comment_list_ad_delete">Do you really want to delete this
        comment?</string>
    <string name="comment_list_toast_deleting">Deleting comment…</string>
    <string name="feed_title">Feed</string>
    <string name="feed_tab_1">Hot</string>
    <string name="feed_tab_2">Recent</string>
    <string name="feed_tab_3">My Posts</string>
    <string name="feed_tab_4">Upvoted</string>
    <string name="feed_fab_description">fab</string>
    <string name="post_list_ad_delete">Do you really want to delete this post?</string>
    <string name="post_list_toast_deleting">Deleting post…</string>
    <string name="post_list_toast_success">Done</string>
    <string name="post_list_toast_failure">Something went wrong</string>
    <string name="profile_name">Username</string>
    <string name="profile_ad_username">Edit username</string>
    <string name="profile_toast_validation">It can\'t be more than 15 characters…</string>
    <string name="profile_toast_saving">Saving…</string>
    <string name="profile_toast_username_exists">Username already taken</string>
    <string name="profile_subs">Subs</string>
    <string name="profile_sub_count">Sub count</string>
    <string name="profile_image_description">Profile image</string>
    <string name="profile_settings_description">Profile settings</string>
    <string name="profile_about_title">About</string>
    <string name="profile_description">Profile description</string>
    <string name="profile_about_hint">Write something about you…</string>
    <string name="profile_bt_save">Save</string>
    <string name="profile_bt_subs">Subscriptions</string>
    <string name="profile_toast_about">About added</string>
    <string name="profile_toast_fetch_error">Error: could not fetch image</string>
    <string name="reply_list_ad_delete">Do you really want to delete this reply?</string>
    <string name="reply_list_toast_deleting">Deleting reply…</string>
    <string name="inspection_item_1">Blocks</string>
    <string name="inspection_item_2">Deputies</string>
    <string name="inspection_item_3">Events</string>
    <string name="inspection_item_4">Fronts</string>
    <string name="inspection_item_5">Legislatures</string>
    <string name="inspection_item_6">Parties</string>
    <string name="inspection_item_7">Propositions</string>
    <string name="inspection_item_8">Polls</string>
    <string name="inspection_item_9">Bodies</string>
    <string name="timestamp_builder_less_text">less than a second</string>
    <string name="timestamp_builder_seconds_text">s</string>
    <string name="timestamp_builder_minutes_text">min</string>
    <string name="timestamp_builder_hours_text">h</string>
    <string name="timestamp_builder_days_text">d</string>
    <string name="timestamp_builder_weeks_text">w</string>
    <string name="timestamp_builder_months_text">m</string>
    <string name="timestamp_builder_years_text">y</string>
    <string name="nav_item_1">Feed</string>
    <string name="nav_item_2">Profile</string>
    <string name="nav_item_3">Discussion</string>
    <string name="nav_item_4">Inspection</string>
    <string name="nav_item_5">Elections</string>
    <string name="menu_item_1">Settings</string>
    <string name="menu_item_2">Laws</string>
    <string name="menu_item_3">Learn!</string>
    <string name="new_image_post_iv_description">post image</string>
    <string name="sheet_title">Create post</string>
    <string name="sheet_item_1">Image/Video</string>
    <string name="sheet_item_2">Text</string>
    <string name="edit_dialog_tv_title">Edit Username</string>
    <string name="edit_dialog_et_hint">Name</string>
    <string name="edit_dialog_bt_save">Save</string>
    <string name="edit_dialog_bt_cancel">Cancel</string>
    <string name="block_name">Name:</string>
    <string name="body_label">Label:</string>
    <string name="body_name">Name:</string>
    <string name="body_alias">Alias:</string>
    <string name="body_type">Type:</string>
    <string name="comment_body">Comment</string>
    <string name="reply_button">Reply</string>
    <string name="replies_button">Replies</string>
    <string name="deputy_name">Name:</string>
    <string name="deputy_party">Party:</string>
    <string name="deputy_state">State:</string>
    <string name="deputy_email" translatable="false">Email:</string>
    <string name="event_date">Date:</string>
    <string name="event_status">Status:</string>
    <string name="event_type">Type:</string>
    <string name="event_description">Description:</string>
    <string name="event_local">Local:</string>
    <string name="event_name">Name:</string>
    <string name="event_building">Building:</string>
    <string name="event_room">Room:</string>
    <string name="event_floor">Floor:</string>
    <string name="front_name">Name:</string>
    <string name="law_type">Type</string>
    <string name="law_date">Date</string>
    <string name="law_locale">Locale</string>
    <string name="law_authority">Authority</string>
    <string name="law_title">Title</string>
    <string name="law_subject">Subject</string>
    <string name="law_description">Description</string>
    <string name="party_label">Label:</string>
    <string name="party_name">Name:</string>
    <string name="poll_date">Date:</string>
    <string name="poll_body">Body:</string>
    <string name="poll_description">Description:</string>
    <string name="post_author">Author</string>
    <string name="post_timestamp" translatable="false">Timestamp</string>
    <string name="post_title">Title</string>
    <string name="post_edited">edited</string>
    <string name="post_body">Post</string>
    <string name="post_more_description">More</string>
    <string name="post_upvote_description">Upvote</string>
    <string name="post_downvote_description">Downvote</string>
    <string name="post_comment_description">Comment</string>
    <string name="post_share_description">Share</string>
    <string name="proposition_label">Label:</string>
    <string name="proposition_year">Year:</string>
    <string name="proposition_summary">Summary:</string>
    <string name="reply_body">Reply</string>
    <string name="search_hint">Search for a user…</string>
</resources>