<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_item_1" />
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_item_2" />
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/ic_discussion"
        android:title="@string/nav_item_3" />
    <item
        android:id="@+id/action_item4"
        android:icon="@drawable/ic_inspection"
        android:title="@string/nav_item_4" />
    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/ic_elections"
        android:title="@string/nav_item_5" />
</menu>