<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_dialog_tv_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_dialog_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/edit_dialog_et_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/edit_dialog_bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_dialog_bt_save" />

    <Button
        android:id="@+id/edit_dialog_bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_dialog_bt_cancel" />

</LinearLayout>