<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FeedNavFragment">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications"
        android:orderInCategory="3"
        android:title="Item"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/menu_item_1"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_laws"
        android:orderInCategory="2"
        android:title="@string/menu_item_2"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_learn"
        android:orderInCategory="3"
        android:title="@string/menu_item_3"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
</menu>