<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sheet_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/sheet_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sheet_tv_add_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:drawablePadding="@dimen/dp_32"
        android:gravity="start|center_vertical"
        android:text="@string/sheet_item_1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_gallery_dark" />

    <TextView
        android:id="@+id/sheet_tv_add_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:drawablePadding="@dimen/dp_32"
        android:gravity="start|center_vertical"
        android:text="@string/sheet_item_2"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_text_dark" />

</LinearLayout>