<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_tv_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/event_date"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_tv_date_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/event_status"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_tv_status_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_tv_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/event_type"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_tv_type_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_tv_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/event_description"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/event_tv_description_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/event_tv_local_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/event_local"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_tv_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/event_name"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/event_tv_name_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_tv_building_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/event_building"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/event_tv_building_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_tv_room_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/event_room"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/event_tv_room_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_tv_floor_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/event_floor"
                    android:textColor="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/event_tv_floor_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>