<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardElevation="4dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/comment_tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/post_author" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDarkLight" />

        <TextView
            android:id="@+id/comment_tv_timestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/post_timestamp" />

        <TextView
            android:id="@+id/comment_tv_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rv_item"
            android:backgroundTint="@color/colorAccent"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_gravity="center"
            android:text="@string/post_edited"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/comment_ib_more"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/post_more_description"
            android:scaleType="centerInside"
            android:src="@drawable/ic_more_vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/comment_tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/comment_body"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/line_separator" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/line_separator_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/comment_ib_upvote"
            android:layout_width="20dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/post_upvote_description"
            android:src="@drawable/ic_upvote" />

        <TextView
            android:id="@+id/comment_tv_upvote_count"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/comment_ib_downvote"
            android:layout_width="20dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/post_downvote_description"
            android:src="@drawable/ic_downvote" />

        <TextView
            android:id="@+id/comment_tv_downvote_count"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textSize="14sp" />

        <Button
            android:id="@+id/comment_bt_reply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/reply_button"
            android:textColor="?attr/colorOnBackground" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/comment_bt_replies"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/replies_button"
            android:textColor="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/comment_tv_reply_count"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"
            android:textAlignment="viewStart"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>